--- a/Bootstrap-Portfolio/portfolio.html
+++ b/Bootstrap-Portfolio/portfolio.html
@@ -30,21 +30,23 @@
   <div id="main-container" class="container">
     <section class="main-section">
       <h1>Portfolio</h1>
-
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-1.jpg" alt="Word Guess">
-        
-        <h3>Word Guess</h3>
+        <a href="https://rodrigoduterte.github.io/giftastic/">
+          <img src="assets/images/giftastic.png" alt="Giftastic">
+          <h3>Giftastic</h3>
+        </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
-
-        <h3>RPG Game</h3>
+        <a href="https://rodrigoduterte.github.io/unit-4-game/">
+          <img src="assets/images/crystals.png" alt="Crystals Collector">
+          <h3>Crystals Collector</h3>
+        </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
-
-        <h3>Trivia Game</h3>
+        <a href="https://rodrigoduterte.github.io/TriviaGame/">
+          <img src="assets/images/trivia.png" alt="Trivia Game">
+          <h3>Trivia Game</h3>
+        </a>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
