files added from bootstrap portfoli

--- a/project1/login.html
+++ b/project1/login.html
@@ -33,7 +33,7 @@
       <input type="password" class="form-control" placeholder="Enter Password">
       
     </div>
-    <button id="LoginButton" type="submit" class="btn"><i class="fas fa-sign-in-alt"></i>Login</button>
+    <button id="LoginButton" type="submit" class="btn"><a href="index.html"><i class="fas fa-sign-in-alt"></i>Login</a></button>
   </form>
 
   <div class="col-12 forgot">
