--- a/Bootstrap-Portfolio/portfolio.html
+++ b/Bootstrap-Portfolio/portfolio.html
@@ -49,9 +49,10 @@
         </a>
       </div>
       <div class="work">
-        <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
-
-        <h3>Rutgers Info Widget</h3>
+        <a href="https://github.com/rodrigoduterte/liri-node-app">
+          <img src="assets/images/nodejs.jpg" alt="Liri App">
+        </a>
+        <h3>Liri App</h3>
       </div>
       <div class="work">
         <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
