--- a/project1/index.html
+++ b/project1/index.html
@@ -32,7 +32,11 @@
 </head>
 
 <body>
-    
+<!-- Preloader -->
+<div id="preloader">
+    <div id="status">&nbsp;</div>
+    </div>
+
     <!---->
     <div class="container">
         <!--Header will go here!-->
@@ -65,7 +69,7 @@
                                     <b>Note:</b> Customer was busy, call back today around 2:15pm.</li>
                             </ul>
                             <div class="card-action">
-                                <button data-target="modal2" class="btn-small right modal-trigger orange darken-4" id="lead-addded" href="#modal2">Follow Up</button>
+                                <button class="btn-small right orange darken-4" id="completed" >Complete</button>
                             </div>
                         </div>
                     </div>
@@ -80,7 +84,7 @@
                                     <b>Note:</b> Customer was busy, call back today around 2:15pm.</li>
                             </ul>
                             <div class="card-action">
-                                <button data-target="modal2" class="btn-small right modal-trigger orange darken-4" id="lead-addded" href="#modal2">Follow Up</button>
+                                <button class="btn-small right orange darken-4" id="completed" >Complete</button>
                             </div>
                         </div>
                     </div> -->
@@ -93,7 +97,7 @@
             <div class="col s12 m6" id="stats">
                 <nav>
                     <div class="nav-wrapper orange darken-3">
-                        <a href="#" class="brand-logo">New Customers</a>
+                        <a href="#" class="brand-logo" id="newCustomers">New Customers</a>
                         <a data-target="modal1" class="btn-small right orange darken-4 modal-trigger" id="lead-added" href="#modal1">Add New</a>
                     </div>
                 </nav>
@@ -109,7 +113,7 @@
                             <tr>
                                 <th>Customer ID</th>
                                 <th>Customer Name</th>
-                                <th>Work Phone</th>
+                                <th>Business Name</th>
 
                             </tr>
                         </thead>
